--- a/views/menubar.ejs
+++ b/views/menubar.ejs
@@ -10,10 +10,10 @@
     <button class="btn btn-outline-primary" type="button">Diet tips</button>
     <button class="btn btn-outline-primary" type="button">Recommended food</button>
     <button class="btn btn-outline-info" type="button">APP information</button>
+    <button class="btn btn-outline-warning" type="button"><a href="/showComments">Comments</a></button>
+    <button class="btn btn-outline-warning" type="button"><a href="/recipes">Recipes</a></button>
 
-    <li class="nav-item">
-      <a class="nav-link" href="showComments">showComments</a>
-    </li>
+
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Profiles
