--- a/views/menubar.ejs
+++ b/views/menubar.ejs
@@ -6,7 +6,7 @@
 
   <form class="form-inline">
     <button class="btn btn-outline-danger" type="button">Intake + </button>
-    <button class="btn btn-outline-success" type="button">Consumption - </button>
+    <button class="btn btn-outline-success" type="button"><a href="/consumption">Consumption - </button>
     <button class="btn btn-outline-primary" type="button">Diet tips</button>
     <button class="btn btn-outline-primary" type="button">Recommended food</button>
     <button class="btn btn-outline-info" type="button">APP information</button>
