--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -2,24 +2,23 @@
 <%- include('menubar') -%>
     <div class="jumbotron">
         <h1>Calorie Track Profile for <%= user.userName %></h1>
-        <img src="<%= user.profilePicURL%>" width="200">
         <hr>
         <p> Welcome <%= user.googlename %>
             with email <%= user.googleemail %>
             You are logged in to Calorie Track.
         </p>
-        <p> Last update on <%=user.lastUpdate %> </p>
+        <p> Last updated on <%= user.lastUpdate %> </p>
         <hr>
         <form method="post" action="/updateProfile">
             userName: <input type="text" name="userName" value="<%= user.userName %>"><br>
             profilePicURL: <input type="text" name="profilePicURL"
                               value="<%= user.profilePicURL %>"><br>
             zipcode: <input type="text" name="zipcode"
-                              value="<%= user.zipcode %>"><br>
-            <input type="submit" class="btn btn-lg btn-primary">
+                         value="<%= user.zipcode %>"><br>
+            <input type="submit" class="btn btn-lg btn-warning">
         </form>
 
 
-     </div>
+    </div>
 
  <%- include('footer') -%>
